Add components and dope page

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -4,6 +4,7 @@ import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 const { pageTitle } = Astro.props;
 ---
+</style>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -16,6 +17,7 @@ const { pageTitle } = Astro.props;
   <nav>
     <a href="/">Home</a>
     <a href="/posts/">Posts</a>
+    <a href="/dope/">Dope</a>
   </nav>
     <slot />
   <nav>
