--- a/src/pages/dope.astro
+++ b/src/pages/dope.astro
@@ -30,7 +30,7 @@ int main() {
 			<Image src="/src/assets/keyboard.png" label="121 WPM @ 60 seconds" />
 			<Image src="/src/assets/dog.jpg" label="Travel guide at Tiger's Nest Trek, Bhutan" />
 			<Image src="/src/assets/blender.png" label="Blender Render" />
-			<Image src="/src/assets/racing.jpg" label="No. 1 in World" />
+			<Image src="/src/assets/racing.jpg" label="No. 1 in the World" />
 			<Image src="/src/assets/reaction.png" label="😮 In-Human!" />
 		</Base>
 	</body>
