--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,8 +18,28 @@ import Code from '../components/Code.astro'
 		<Base pageTitle="Home">
 			<h1>Apurva Mishra</h1>
 			<p>
-			There
+			Welcome to my homepage!
 			</p>
+			<p>
+			I’m currently pursuing a Bachelor’s degree at VIT University in CSE.
+			In the process, I have become more and more <a href="https://www.kimi.com/share/d10r992av1fdtpp6ikag">AGI-pilled</a>.
+			Not from the direction of the <a href="https://www.kimi.com/share/d1v5q9hb9p54l0l20ul0">paper-clip argument</a>
+			but rather that it's going to augment humans in continuing the scientific advances.
+			</p>
+			<p>
+			I am excited to contribute to the development of <a href="https://x.com/ylecun/status/1794249923329720415">Advanced Machine Intelligence (AMI)</a>
+			and its potential impact.
+			</p>
+			<p>
+			Email: apurva [dot] jpr [at] gmail [dot] com
+			</p>
+			<h2>News</h2>
+			<ul>
+				<li>
+					<strong>2024-10</strong> Completed Google Summer of Code on the topic <a href="https://summerofcode.withgoogle.com/archive/2024/projects/kXG0mZoj">Sandboxed and Deterministic Proc Macro using Wasm</a>
+					in the Rust compiler
+				</li>
+			</ul>
 		</Base>
 	</body>
 </html>
