--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ import Code from '../components/Code.astro'
 			and its potential impact.
 			</p>
 			<p>
-			Email: apurva [dot] jpr [at] gmail [dot] com
+			Reach out to me at A@B, where A=apurva.jpr and B=gmail.com.
 			</p>
 			<h2>News</h2>
 			<ul>
